# bewise.ai_test

./: .gitignore  README.md  app.py  dependencies.py  docker-compose.yml  public_api_requests.py  pyproject.toml
db/: db.py
models/: question.py
repositories/: question.py
routers/: questions.py
schemas/: question.py
