[tool.poetry]
name = "bewise_test"
version = "0.1.0"
description = ""
authors = ["Daniel <matsubus@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.2"
python-dotenv = "^0.20.0"
SQLAlchemy = "^1.4.36"
pydantic = "^1.9.0"
psycopg2-binary = "^2.8.3"
uvicorn = "^0.17.6"
psycopg2 = "^2.9.3"
requests = "^2.27.1"
isort = "^5.10.1"
black = "^22.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

